--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
