--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,18 +18,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3.0.0
-      
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.1.1
-      with:
-        node-version: 16.x
-        
-    - name: Install our deps
-      run: npm install
-      
-    - name: Run Lint Script
-      run: npm run eslint
-    
-    
+      - name: Checkout
+        uses: actions/checkout@v3.0.0
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.1.1
+        with:
+          node-version: 16.x
+
+      - name: Install our deps
+        run: npm install
+
+      - name: Run Lint Script
+        run: npm run eslint
