--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,33 @@
-# This is a basic workflow to help you get started with Actions
-name: Lint Workflow
+name: Lint & Deploy Workflow
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
-    # The branches below must be a subset of the branches above
     branches:
       - main
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   lint:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3.0.0
-      
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.1.1
-      with:
-        node-version: 14.x
-        
-    - name: Install our deps
-      run: npm install
-      
-    - name: Run Lint Script
-      run: npm run eslint
-    
-    
+      - name: Checkout
+        uses: actions/checkout@v3.0.0
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.1.1
+        with:
+          node-version: 14.x
+
+      - name: Install our deps
+        run: npm install
+
+      - name: Run Lint Script
+        run: npm run eslint
+  deploy:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: actions-demo-dwg
+          heroku_email: dgross@instructors.2u.com
